@@ -668,6 +668,9 @@ void load_module_samples (SAMPLE * s, int numsamples, int ntsc)
 	memset(sp->modenv_offset, 0, sizeof(sp->modenv_offset));
 	sp->envelope_delay = sp->modenv_delay =
 		sp->tremolo_delay = sp->vibrato_delay = 0;
+	sp->sample_type = SF_SAMPLETYPE_MONO;
+	sp->sf_sample_link = -1;
+	sp->sf_sample_index = 0;
 
 	if (sp->data_length >= (1 << (31 - FRACTION_BITS)) - 1)
 	    shrink_huge_sample(sp);
