@@ -1,3 +1,9 @@
+2004-01-07  Saito <saito2@digitalme.com>
+
+	* timidity/playmidi.c, timidity/instrum.[ch],
+	  timidity/mod2midi.c, timidity/smplfile.c:
+	  Fix around SoundFont.
+
 2004-01-06  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.c, timidity/sndfont.c,
